--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/assets/normalize.css" />
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="assets/normalize.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -35,13 +35,13 @@
         <div class="image-slides">
           <div class="slider">
             <div>
-              <img src="./assets/images/house-front.jpg" class="slide" alt="" />
+              <img src=".assets/images/house-front.jpg" class="slide" alt="" />
             </div>
             <div>
-              <img src="./assets/images/house-above.jpg" class="slide" alt="" />
+              <img src=".assets/images/house-above.jpg" class="slide" alt="" />
             </div>
             <div>
-              <img src="./assets/images/house-lake.jpg" class="slide" alt="" />
+              <img src=".assets/images/house-lake.jpg" class="slide" alt="" />
             </div>
           </div>
         </div>
