change image paths

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <div class="image-slides">
           <div class="slider">
             <div>
-              <img src=".assets/images/house-front.jpg" class="slide" alt="" />
+              <img src="assets/images/house-front.jpg" class="slide" alt="" />
             </div>
             <div>
-              <img src=".assets/images/house-above.jpg" class="slide" alt="" />
+              <img src="assets/images/house-above.jpg" class="slide" alt="" />
             </div>
             <div>
-              <img src=".assets/images/house-lake.jpg" class="slide" alt="" />
+              <img src="assets/images/house-lake.jpg" class="slide" alt="" />
             </div>
           </div>
         </div>
