revert to old jquery

--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
       rel="stylesheet"
     />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <link rel="stylesheet" href="assets/normalize.css" />
     <link rel="stylesheet" href="assets/style.css" />
+
     <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      src="https://code.jquery.com/jquery-2.0.0.min.js"
+      integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw="
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" type="text/css" href="assets/slick/slick.css" />
@@ -27,7 +24,10 @@
       type="text/css"
       href="assets/slick/slick-theme.css"
     />
-    <script type="text/javascript" src="assets/slick/slick.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.6/slick.min.js"
+    ></script>
     <script
       src="https://browser.sentry-cdn.com/5.10.2/bundle.min.js"
       integrity="sha384-ssBfXiBvlVC7bdA/VX03S88B5MwXQWdnpJRbUYFPgswlOBwETwTp6F3SMUNpo9M9"
